ok kamarscraper finished for real

--- a/kamar-web-app-front-end/src/Components/Home/home.css
+++ b/kamar-web-app-front-end/src/Components/Home/home.css
@@ -187,6 +187,11 @@ a:hover{
 .totalCredits{
     width: 45%;
 }
+
+.currentYearTotalCredits{
+    width: 45%;
+}
+
 .subjectCredits{
     width: 80%;
 }
