--- a/kamar-web-app-front-end/src/Components/Home/home.css
+++ b/kamar-web-app-front-end/src/Components/Home/home.css
@@ -113,6 +113,7 @@ a:hover{
 .sidebar-right{grid-area: sidebar-right;}
 .card-wrapper-index{grid-area: card-wrapper-index;}
 .sign-in-warning{grid-area: sign-in-warning;}
+.welcome-banner{grid-area: welcome;}
 .ncea-overview-wrapper{grid-area: ncea-overview;}
 .body{grid-area: body;}
 
@@ -140,7 +141,8 @@ a:hover{
     margin-top: 10px;
     justify-items: center;
     align-items: center;
-    grid-template-areas: 
+    grid-template-areas:
+    "welcome welcome welcome" 
     "ncea-overview ncea-overview ncea-overview"             
     "sidebar-left card-wrapper-index sidebar-right"
     "body body body";   
@@ -149,6 +151,27 @@ a:hover{
     grid-gap: 15px;
 
 }
+
+.welcome-banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background:#008C5A;
+    width: 100%;
+    margin:0;
+}
+
+.welcome-name{
+    padding:2%;
+    color: #fff;
+}
+
+.welcome-nsn{
+    padding:2%;
+    color: #fff;
+}
+
+
 
 .sidebar-content{
     margin: 15px;
@@ -161,40 +184,48 @@ a:hover{
 }
 
 .ncea-overview-heading{grid-area: title;}
-.graph{grid-area: graph;}
+.graph-wrapper{grid-area: graph;}
 .lastsubass{grid-area: lastsubass;}
 .graph-controls{grid-area: controls;}
 .ncea-details-button{grid-area: nceadetailsbutt;}
 
 .ncea-overview-wrapper{
     display: grid;
+    grid-row: 1fr;
     grid-template-areas: 
-    'title title nsn'
+    'title title title'
     'graph graph controls'
     'lastsubass lastsubass nceadetailsbutt'; 
     background-color: #F3F3F3;
     width: 100%;
+    height: 100%;
 }
 
-.graph{
+.ncea-overview-heading{
+    background:#464646;
+    color:#fff;
+    padding: 3%;
+    margin: 0;
+
+}
+
+.ncea-overview-nsn{
+    background:#b6b6b6;
+    padding: 3%;
+    margin: 0;
+}
+
+.graph-wrapper{
     justify-self: center;
+    width: 60%;
+    height: 70%;
 }
 
-.creditGoals{
+
+.stacked-bar-graph{
     width: 70%;
-
-}
-.totalCredits{
-    width: 45%;
 }
 
-.currentYearTotalCredits{
-    width: 45%;
-}
-
-.subjectCredits{
-    width: 80%;
-}
 
 .graph-controls{
     display: flex;
@@ -203,8 +234,8 @@ a:hover{
 }
 
 .ncea-overview-button{
-    margin: 15%;
-    padding: 5%;
+    margin: 7%;
+    padding: 3%;
 }
 
 .ncea-details-button-wrapper{
