--- a/kamar-web-app-front-end/src/Components/StandardResoucesResults/subject-resources-results.css
+++ b/kamar-web-app-front-end/src/Components/StandardResoucesResults/subject-resources-results.css
@@ -24,6 +24,7 @@
     grid-template-columns: 3fr 1fr;
     width: 100%;
     height: 100%;
+    margin: 1em;
 }
 .resource-wrapper{
     width: 100%;
